.repos/effect-tsgo/testdata/baselines/reference/effect-v4/floatingEffect_disabledWildcard.errors.txt
=== Metadata ===
Effect version: 4.0.0-beta.27

/.src/floatingEffect_disabledWildcard.ts(3,1): error TS377001: Effect must be yielded or assigned to a variable. effect(floatingEffect)
/.src/floatingEffect_disabledWildcard.ts(10,1): error TS377001: Effect must be yielded or assigned to a variable. effect(floatingEffect)


==== /.src/floatingEffect_disabledWildcard.ts (2 errors) ====
    import { Effect } from "effect"
    
    Effect.succeed(1)
    ~~~~~~~~~~~~~~~~~
!!! error TS377001: Effect must be yielded or assigned to a variable. effect(floatingEffect)
    
    /** @effect-diagnostics *:off */
    
    Effect.succeed(1)
    
    /** @effect-diagnostics floatingEffect:error */
    Effect.succeed(1)
    ~~~~~~~~~~~~~~~~~
!!! error TS377001: Effect must be yielded or assigned to a variable. effect(floatingEffect)
    
    /** @effect-diagnostics *:off */
    Effect.succeed(1)
    
